# Telegram-News-Maker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
app/: config.py
app/ai/: generator.py  openai_client.py
app/api/: endpoints.py  schemas.py
app/db/: __init__.py  enums.py  models.py  session.py
app/news_parser/sources/sites/: html.py  rss.py  sites.py
app/news_parser/sources/tg/: telegram_groups.py
app/telegram/: publisher.py
app/workers/: celery_app.py
app/workers/tasks/: __init__.py  collect.py  filter.py  generate.py  pipeline.py  publish.py
migrations/: env.py
migrations/versions/: 04a051855ca2_initial_tables.py
